# Galvanism

./: Cargo.toml
crates/galvanism_server/: Cargo.toml
crates/galvanism_server/src/: main.rs
crates/galvanism_server/src/span_api/: mod.rs  structs.rs
span_api/: Cargo.toml
span_api/src/: lib.rs  structs.rs
src/: main.rs
