[package]
name = "galvanism_server"
version = "0.1.0"
edition = "2021"

[dependencies]
mdns-sd = "0.7"
tui = "0.19.0"
crossterm = "0.26.1"
colored = "2.0.0"

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
